Fix multi-day events on mobile

--- a/Droopy.scss
+++ b/Droopy.scss
@@ -287,6 +287,7 @@ time.droopy-cal {
     .calendar-calendar {
         .date-box td,
         .single-day td,
+        .multi-day td,
         thead th {
             clear: none;
             float: none;
